# bottec_bot

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/core/: config.py  constants.py  logger.py  pagination.py  repositories.py  services.py
app/handlers/: __init__.py  buy.py  cart.py  categories.py  faq.py  pagination.py  products.py  start.py  subscriptions.py
app/infrastructure/database/: meta.py  orm.py
app/infrastructure/s3/: client.py
app/keyboards/: __init__.py  buy.py  cart.py  categories.py  faq.py  pagination.py  products.py  start.py  subscriptions.py
app/middlewares/: __init__.py  database.py  s3_middleware.py  subscriptions.py
app/migrations/: env.py
app/migrations/versions/: 623b474fe8ea_init.py
app/models/: __init__.py  broadcast.py  carts.py  categories.py  chats.py  faq.py  orders.py  products.py  users.py
app/repositories/: broadcast.py  carts.py  categories.py  chats.py  faq.py  orders.py  products.py  users.py
app/scheduler/: broadcast.py
app/services/: broadcast.py  carts.py  categories.py  chats.py  orders.py  products.py  s3.py  subscriptions.py  users.py
app/states/: cart_state.py
app/utils/: order_to_excel.py
