[tool.poetry]
name = "bot"
version = "0.1.0"
description = ""
authors = ["SowaSova <cei4bio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
asyncpg = "^0.30.0"
aiogram = "^3.14.0"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.6.1"
redis = "^5.2.0"
aiobotocore = "^2.15.2"
apscheduler = "^3.10.4"
openpyxl = "^3.1.5"
alembic = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
